Edited wiki page through web user interface.

--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -1,4 +1,4 @@
-#summary Krijco PRTG Tools: Version history for the "PRTG Tools family".
+#summary PTF Tools: Version history for the "PRTG Tools family".
 #labels Featured
 #sidebar KrijcoWikiSidebar
 
