Edited wiki page through web user interface.

--- a/wiki/Translations.wiki
+++ b/wiki/Translations.wiki
@@ -1,4 +1,5 @@
 #summary Explanation for the language files for PRTG
+#labels Featured
 
 = Translations for PRTG Network Monitor =
 
@@ -7,6 +8,7 @@ PRTG already comes with a set of translations created by Paessler (e.g. English,
 Currently available:
 
  * http://gf-ptf.googlecode.com/files/nl.png [http://code.google.com/p/prtg7addons/downloads/list?can=2&q=translation:%20dutch Dutch] (by Gerard Feijth)
+[http://code.google.com/p/prtg7addons/downloads/list?can=2&q=Translation:+Brazilian Brazilian]
 
 = Installation of Language Files=
 
