Edited wiki page through web user interface.

--- a/wiki/Twitter.wiki
+++ b/wiki/Twitter.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This custom Notification sends notifications from PRTG to Twitter.
+This Custom Notification sends notifications from PRTG to Twitter.
 
 Use the following parameters for the sensor:
 
