--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -18,16 +18,21 @@ http://gf-ptf.googlecode.com/files/PTF.png
 http://gf-ptf.googlecode.com/files/Open-48x48.png Version history & Downloads
  * ===[VersionHistory Applications]===
  * ===[CustomSensors Custom Sensors]===
- * ===[Notifications Notifications]===
+ * ===[Notifications Custom Notifications]===
+
+ ----
+
+====Want to stay informed about new releases, bug fixes, upcoming changes and more?====
+[http://twitter.com/prtgtoolsfamily http://gf-ptf.googlecode.com/files/Follow_me_on_twitter.png]
+
+[http://prtg-tools-family.blogspot.com http://gf-ptf.googlecode.com/files/blogger.png] [http://prtg-tools-family.blogspot.com Visit my blog]
 
  ----
 
 http://gf-ptf.googlecode.com/files/Document-48x48.png [NotifierDocumentation Documentation]
 
-====Stay informed about new releases, bug fixes, upcoming changes and more.====
-
-http://gf-ptf.googlecode.com/files/blogger.png [http://prtg-tools-family.blogspot.com Visit my blog]
+ ----
 
 ====Comments, Suggestions or Feature Requests?====
-http://gf-ptf.googlecode.com/files/Mail-48x48.png Leave a note [http://code.google.com/p/prtg7addons/wiki/UserFeedback here]
+[http://code.google.com/p/prtg7addons/wiki/UserFeedback http://gf-ptf.googlecode.com/files/Mail-48x48.png] Leave a note [http://code.google.com/p/prtg7addons/wiki/UserFeedback here]
  
