--- a/wiki/Notifications.wiki
+++ b/wiki/Notifications.wiki
@@ -6,7 +6,7 @@ http://gf-ptf.googlecode.com/files/PTF_logo.png
 
 ====Latest versions:====
 || *Notification* || *Version* || *Date* || *Download* ||
-||[#Twitter Twitter]||1.0.1.1||16/01/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_New_50.png ||
+||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
 
 == General ==
 All Notifications listed target the _.net framework 2.0_.
@@ -32,5 +32,7 @@ This Notification can be used to send notifications from PRTG to Twitter. More [
  back to [#Latest_versions: top]
 
 === Version history === 
+====1.0.2.1 _05/02/2010_====
+ * Bugfix: When protecting your tweets, an error was returned "The remote server returned an error: (401) Unauthorized"
 ====1.0.1.1 _16/01/2010_====
  * First public version
