--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -12,10 +12,10 @@ http://gf-ptf.googlecode.com/files/PTF_logo.png
 ||[#FTPFileCount FTPFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.FTPFileCount.zip here]||
 ||[#NetworkFileCount NetworkFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
 ||[#LogFileReader LogFileReader]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
-||[#EmailCount EmailCount]||1.0.3.1||30/12/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
+||[#EmailCount EmailCount]||1.0.3.1||30/12/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
 ||[#INIFileValue INIFileValue]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.INIFileValue.zip here]||
 ||[#PingWarning PingWarning]||1.0.2.1||30/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
-||[#CSVExport CSVExport]||1.0.2.3||14/01/2010||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
+||[#CSVExport CSVExport]||1.0.2.3||14/01/2010||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]||
 
 == Overview ==
 http://gf-ptf.googlecode.com/files/CustomSensors.png
@@ -204,7 +204,7 @@ More [CSVExportSensor details]
 
 === Version history ===
 ====1.0.2.3 _14/01/2010_====
- * Bugfix: csvexport error 0:Impersonation of \ failed! `[87]` The parameter is incorrect
+ * Bugfix: csvexport error 0:Impersonation of \ failed! `[87]` The parameter is incorrect.
 ====1.0.2.2 _04/01/2010_====
  * Bugfix: solved a problem with the users password containing a #
 ====1.0.2.1 _28/12/2009_====
