--- a/wiki/Notifications.wiki
+++ b/wiki/Notifications.wiki
@@ -6,7 +6,7 @@ http://gf-ptf.googlecode.com/files/PTF_logo.png
 
 ====Latest versions:====
 || *Notification* || *Version* || *Date* || *Download* ||
-||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]|| http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png ||
+||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]||
 
 == General ==
 All Notifications listed target the _.net framework 2.0_.
