--- a/wiki/NotifierGadgetXP.wiki
+++ b/wiki/NotifierGadgetXP.wiki
@@ -21,4 +21,4 @@ Clicking the server name part of the gadget opens your default Network Monitor w
 =More Information=
 Please see the [NotifierDocumentation Documentation] for details and screenshots.
 
-The !NotifierGadgetXP can be downloaded from [VersionHistory this] page.
+The NotifierGadgetXP can be downloaded from [VersionHistory this] page.
