--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -17,6 +17,7 @@ http://gf-ptf.googlecode.com/files/PTF_logo.png
 ||[#PingWarning PingWarning]||1.0.2.1||30/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
 ||[#CSVExport CSVExport]||1.0.2.3||14/01/2010||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]||
 ||[#CheckDHCP CheckDHCP]||1.0.1.1||15/03/2010||[http://prtg7addons.googlecode.com/files/PTF.CheckDHCP.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
+||[#SensorCount SensorCount]||1.0.1.1||24/03/2010||[http://prtg7addons.googlecode.com/files/PTF.SensorCount.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
 
 == Overview ==
 http://gf-ptf.googlecode.com/files/CustomSensors.png
@@ -220,7 +221,6 @@ More [CSVExportSensor details]
 ====1.0.1.1 _16/12/2009_====
  * First public version
 
-
 ----
 
 == CheckDHCP ==
@@ -234,6 +234,33 @@ This sensor checks your DHCP server and returns the response time.
 
 === Version history ===
 ====1.0.1.1 _15/03/2010_====
+ * First public version
+
+ back to [#Latest_versions: top]
+
+----
+
+== !SensorCount ==
+=== Summary ===
+This sensor counts the number of sensors on your PRTG server.
+
+{{{
+-s=192.168.1.1 -u=username -p=password|passhash [-r=rootID]
+}}}
+Combine any of the following parameters
+{{{
+-u    count up sensors
+-d    count down sensors
+-a    count acknowledged down sensors
+-w    count warning sensors
+-u    count unusual sensors
+-p    count paused sensors
+-k    count unknown sensors
+}}}
+
+
+=== Version history ===
+====1.0.1.1 _24/03/2010_====
  * First public version
 
  back to [#Latest_versions: top]
