--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -14,7 +14,7 @@ http://gf-ptf.googlecode.com/files/PTF_logo.png
 ||[#NotifierCE_version_history NotifierCE]||2.0.2.2||08/01/2010||[http://prtg7addons.googlecode.com/files/PTF.NotifierCE.zip here]||
 ||[#Notifier_Proxy_version_history Notifier Proxy]||1.0.1.2||31/12/2009||[http://prtg7addons.googlecode.com/files/PTF.NotifierProxy.zip here]||
 ||[#Distribution_Tool_version_history Distribution Tool]||1.0.2.1||09/09/2009||[http://prtg7addons.googlecode.com/files/Krijco.Distribution%20tool.zip here]||
-||[#Translation_Tool_version_history Translation Tool]||1.0.4.1||28/11/2009||[http://prtg7addons.googlecode.com/files/PTF.Translate.zip here]||
+||[#Translate_version_history Translation Tool]||1.0.4.1||06/06/2010||[http://prtg7addons.googlecode.com/files/PTF.Translate.zip here]||http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png||
 ||[#Map_Designer_version_history Map Designer] ||1.0.5.1||03/06/2010||[http://prtg7addons.googlecode.com/files/PTF.Mapdesigner.zip here]||http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png||
 ||[#Distribute_Sensors_version_history Distribute Sensors]||1.0.2.1||28/12/2009||[http://prtg7addons.googlecode.com/files/PTF.DistributeSensors.zip here]||
 ||[#CSVImport_version_history CSVImport]||1.0.1.1||10/05/2010||[http://prtg7addons.googlecode.com/files/PTF.CSVImport.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
@@ -207,12 +207,17 @@ With this tool you can modify your PRTG Server download page to let your users d
 
 ----
 
-==Translation Tool version history==
+==Translate version history==
 === Summary ===
 PTF Translate is a tool used to create new language files for PRTG Network Monitor as well as for the !TrayNotifier. [Translate details]
 
  back to [#Latest_versions: top]
 
+====1.0.5.1 _06/06/2010_====
+ * Changed: Compiled the executable with Visual Studio 2010.
+ * Changed: Modified the search for updates.
+ * Changed: Build the installer using !InstallShield.
+ * Note: If you are upgrading from a previous version, you have to manually uninstall the previous version.
 ====1.0.4.1 _28/11/2009_====
  * New: Option to automatically make backup files when saving a translation file.
  * New: Option to check for online updates. 
