--- a/wiki/Notifications.wiki
+++ b/wiki/Notifications.wiki
@@ -9,6 +9,7 @@ Looking for notifications written for PRTG version 8 or later? Take a look at [h
 ====Latest versions:====
 || *Notification* || *Version* || *Date* || *Download* ||
 ||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]||
+||[#Launcher Launcher]||1.0.1.1||24/07/2010||[http://prtg7addons.googlecode.com/files/PTF.Launcher.zip here]||
 
 == General ==
 All Notifications listed target the _.net framework 2.0_.
@@ -37,4 +38,16 @@ This Notification can be used to send notifications from PRTG to Twitter. More [
 ====1.0.2.1 _05/02/2010_====
  * Bugfix: When protecting your tweets, an error was returned "The remote server returned an error: (401) Unauthorized"
 ====1.0.1.1 _16/01/2010_====
+ * First public version
+
+----
+
+== Launcher ==
+=== Summary ===
+PTF launcher is a Custom Notification that can launch external applications. More [Launcher details]
+
+ back to [#Latest_versions: top]
+
+=== Version history === 
+====1.0.1.1 _24/07/2010_====
  * First public version
